Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -158,6 +158,87 @@ blocks:
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
+    -
+        _id: split-banner-slider
+        content:
+            subHeading: The Lounge
+            heading:
+            p-text: >-
+                <p>Experience timeless classics with a modern twist. Savour
+                locally roasted coffee, exquisite teas, and fine wines in an
+                elegant setting overlooking the resort's cascading pools, to the
+                ocean.<br /><br />Open 11.00 am - 10.00 pm every day.</p>
+            buttons:
+                -
+                    text: Discover more
+                    url:
+                    button-color: mint-400
+        carousel:
+            desktop-image-position: left
+            dots: true
+            slides:
+                -
+                    img: /uploads/KC-Regent-slider-11.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-10.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-9.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-8.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-7.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-6.jpg
+                    alt: Regent Bali Canggu
+        color-scheme: base
+        scheme-padding: small-padding
+        scheme-max-width: l
+    -
+        _id: split-banner-slider
+        content:
+            subHeading: Cure
+            heading:
+            p-text: >-
+                <p>Taking cues from Chef Andrew Walsh’s Singapore flagship that
+                earned him the coveted Michelin Star, immerse in a journey
+                through the acclaimed Chef’s Irish heritage, guided by the
+                flavors of Nordic European waters and the untamed
+                wilderness.</p><p>Open XX.00 am - XX.00 pm every day.</p>
+            buttons:
+                -
+                    text: Discover more
+                    url:
+                    button-color: mint-400
+        carousel:
+            desktop-image-position: left
+            dots: true
+            slides:
+                -
+                    img: /uploads/KC-Regent-slider-11.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-10.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-9.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-8.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-7.jpg
+                    alt: Regent Bali Canggu
+                -
+                    img: /uploads/KC-Regent-slider-6.jpg
+                    alt: Regent Bali Canggu
+        color-scheme: base
+        scheme-padding: small-padding
+        scheme-max-width: l
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
