Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -174,7 +174,7 @@ blocks:
                     url:
                     button-color: mint-400
         carousel:
-            desktop-image-position: left
+            desktop-image-position: right
             dots: true
             slides:
                 -
