Updated 4 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -394,7 +394,9 @@ blocks:
     -
         _id: wave-grid
         block-content-html: >-
-            <h2 class="heading-lg">Offers &amp; Promotions</h2><p> Unwind in the idyllic setting of Regent Bali Canggu. Enhance your luxurious stay with exclusive offers and complimentary inclusions.</p>
+            <h2 class="heading-lg">Offers &amp; Promotions</h2><p> Unwind in the
+            idyllic setting of Regent Bali Canggu. Enhance your luxurious stay
+            with exclusive offers and complimentary inclusions.</p>
         grid:
             -
                 heading: Stay Longer & Save
@@ -402,7 +404,7 @@ blocks:
                     Extend your adventure and save more. It’s the perfect chance
                     to settle in and explore everything in Canggu and far
                     beyond.
-                image: /uploads/stay-longer-save.jpg
+                image: /uploads/stay-longer-and-save.jpg
                 button:
                     url: '#'
                     text: reserve
@@ -423,7 +425,7 @@ blocks:
                 description: >-
                     Celebrate the year’s end with exquisite dining and serene
                     moments, embracing the art of graceful celebration.
-                image: /uploads/elegancy-at-year-s-end.jpg
+                image: /uploads/elegance-at-year-s-end.jpg
                 button:
                     url: '#'
                     text: reserve
