--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@ blocks:
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Sazon</h2><p>Led by award-winning
+                    <h3 class="heading-lg h2">Sazón</h2><p>Led by award-winning
                     Chef Andrew Walsh, experience the neighborhood Spanish
                     hideaway on Batu Bolong, where vibrant atmosphere meets
                     authentic flavours.</p><p>Open 8am - 10pm everyday. </p>
                     <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon -
                     4am</p>
                 button-link: /dining
-                button-text: Explore Sazon
+                button-text: Explore Sazón
         color-scheme: mint-300
     -
         _id: slider
