updated sazon times

--- a/dining.html
+++ b/dining.html
@@ -100,9 +100,7 @@ blocks:
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Mediterranean hideaway on Batu Bolong, where
-                vibrant atmosphere meets authentic flavours.<br /><br /><br
-                />Mon - Thurs Open 08.00 am - 09.00 pm<br />Fri - Sun Open Noon
-                - 12.00 pm</p>
+                vibrant atmosphere meets authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
             buttons:
                 -
                     text: Discover more
