--- a/index.html
+++ b/index.html
@@ -246,9 +246,7 @@ blocks:
                     <h3 class="heading-lg h2">Sazón</h2><p>Led by award-winning
                     Chef Andrew Walsh, experience the neighborhood Spanish
                     hideaway on Batu Bolong, where vibrant atmosphere meets
-                    authentic flavours.</p><p>Open 8am - 10pm everyday. </p>
-                    <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon -
-                    4am</p>
+                    authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
                 button-link: /dining
                 button-text: Explore Sazón
         color-scheme: mint-300
