--- a/dining.html
+++ b/dining.html
@@ -21,7 +21,7 @@ blocks:
         color-scheme: dark
     -
         _id: text-block-top-overlap
-        block-content-html: "<h3>RESTUARANTS &amp; DINING</h3><h2 class=\"heading-lg\">An Oasis of Gastronomy Awaits</h2><p>Six dining venues sweep guests through a fascinating culinary journey of Balinese, Asian and International cuisine that showcase delicate layers of flavour and art form. The Regent food &amp; beverage philosophy, Taste Gallery, presents a multi-sensory culinary experience promising to uplift guests to new heights through immersive and unexpected creatives.\L \L </p><p>For the very first time, Regent Bali Canggu is proud to introduce the extraordinary talents of award-winning Chef Andrew Walsh, who will lead two of the resort’s culinary concepts, setting the stage for unforgettable moments.</p> "
+        block-content-html: "<h3>RESTAURANTS &amp; DINING</h3><h2 class=\"heading-lg\">An Oasis of Gastronomy Awaits</h2><p>Six dining venues sweep guests through a fascinating culinary journey of Balinese, Asian and International cuisine that showcase delicate layers of flavour and art form. The Regent food &amp; beverage philosophy, Taste Gallery, presents a multi-sensory culinary experience promising to uplift guests to new heights through immersive and unexpected creatives.\L \L </p><p>For the very first time, Regent Bali Canggu is proud to introduce the extraordinary talents of award-winning Chef Andrew Walsh, who will lead two of the resort’s culinary concepts, setting the stage for unforgettable moments.</p> "
         overlay-color-scheme: dark
         content-max-width: 35rem
         text-alignment: center
