explore buttons and rooms sizes

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -47,7 +47,8 @@ blocks:
                 rooms:
                     -
                         name: Ocean View King
-                        size: 76
+                        size: 818
+                        size-m: 76
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
@@ -60,7 +61,8 @@ blocks:
                         tour-pic: /uploads/regentbalicanggu-studiosuite.jpeg
                     -
                         name: Lagoon Access Twin
-                        size: 120
+                        size: 818
+                        size-m: 76
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
@@ -80,7 +82,8 @@ blocks:
                         tour-pic: /uploads/studio-ocean-view-king.jpg
                     -
                         name: Studio Suite King
-                        size: 120
+                        size: 818
+                        size-m: 76
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
@@ -108,6 +111,7 @@ blocks:
                     -
                         name: One Bedroom Ocean View King
                         size: 936
+                        size-m: 87 
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
@@ -120,7 +124,8 @@ blocks:
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
-                        size: 120
+                        size: 936
+                        size-m: 87 
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
@@ -141,7 +146,8 @@ blocks:
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
                         name: One Bedroom King
-                        size: 120
+                        size: 936
+                        size-m: 87 
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
@@ -168,7 +174,8 @@ blocks:
                 rooms:
                     -
                         name: Two Bedroom Lagoon Access
-                        size: 174
+                        size: 1873   
+                        size-m: 174
                         bed-size: KING BED & TWIN BEDS
                         sleeps: 6
                         extra-feature:
@@ -183,7 +190,8 @@ blocks:
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
-                        size: 120
+                        size: 1873   
+                        size-m: 174
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
@@ -210,7 +218,8 @@ blocks:
                 rooms:
                     -
                         name: Premium One Bedroom Ocean View
-                        size: 108
+                        size: 1163 
+                        size-m:  108
                         bed-size: KING BED
                         sleeps: 4
                         extra-feature:
@@ -226,7 +235,8 @@ blocks:
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
-                        size: 0
+                        size: 1163 
+                        size-m:  108
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
@@ -236,7 +246,8 @@ blocks:
                         tour-pic: /uploads/tour-placeholder.avif
                     -
                         name: Garden View King
-                        size: 0
+                        size: 1163 
+                        size-m:  108
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
@@ -253,7 +264,8 @@ blocks:
                 rooms:
                     -
                         name: Beachfront Private Pool Villa
-                        size: 327
+                        size: 3520 
+                        size-m: 327 
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
@@ -269,7 +281,8 @@ blocks:
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
-                        size: 0
+                        size: 2368 
+                        size-m: 220 
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
@@ -283,7 +296,8 @@ blocks:
                 rooms:
                     -
                         name: Oceanfront Private Pool Penthouse
-                        size: 618
+                        size: 6652 
+                        size-m: 618 
                         bed-size: KING BED & TWIN BEDS
                         sleeps: 6
                         extra-feature:
