--- a/dining-taru.html
+++ b/dining-taru.html
@@ -48,7 +48,7 @@ blocks:
                 -
                     text: BOOK A TABLE
                     url:
-                    button-color: mint-400
+                    color-scheme: mint-400
         carousel:
             desktop-image-position: right
             dots: true
