--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ blocks:
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
                     <h3 class="heading-lg h2">Sazón</h2><p>Led by award-winning
-                    Chef Andrew Walsh, experience the neighborhood Spanish
+                    Chef Andrew Walsh, experience the neighborhood Mediterranean
                     hideaway on Batu Bolong, where vibrant atmosphere meets
                     authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
                 button-link: /dining
