Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -112,65 +112,96 @@ blocks:
                     text: learn more
                     url:
         color-scheme: base
-    - 
+    -
         _id: highlights
         heading: The Highlights
         highlights:
+            -
+                nav-heading: Festive Season
+                heading: Festive Celebrations
+                image: /uploads/festive-season-highlight-image.avif
+                imag-alt:
+                text: >-
+                    This festive season, indulge in extraordinary
+                    moments—flavours that linger, music that stirs the soul, and
+                    gatherings that become cherished memories. A celebration
+                    timeless, meaningful, and entirely your own.
+                button-text: FESTIVE BROCHURE
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/regent-bali-festive-celebrations-new2025
+            -
+                nav-heading: Michelin Master Series
+                heading: Where Michelin Stars Take the Stage
+                image: /uploads/michelin-master-series-highlight-image.avif
+                imag-alt:
+                text: >-
+                    Regent Bali Canggu unveils the Michelin Master Series — a
+                    showcase of culinary artistry and intimate dining. Each
+                    edition features Michelin-starred chefs from across Asia,
+                    expressing heritage and creativity through refined seasonal
+                    menus.
+                button-text:
+                link:
             -
                 nav-heading: Penthouse
                 heading: Above the Ocean, Beyond the Ordinary
                 image: /uploads/regent-bali-ph.avif
                 imag-alt:
-                text: Perched above the shoreline, the two-bedroom penthouse invites rare seclusion with sweeping ocean views, a private infinity pool, and personal cabana. Enjoy Regent Club access, bespoke in-residence breakfast, and a 60-minute Balinese massage, an experience of quiet indulgence, where every detail evokes refinement, privacy, and serene coastal living.
-                button-text: 
-                link:      
-            -
-                nav-heading: Festive Season
-                heading: Festive Celebrations
-                image:  /uploads/festive-season-highlight-image.avif
-                imag-alt:
-                text: This festive season, indulge in extraordinary moments—flavours that linger, music that stirs the soul, and gatherings that become cherished memories. A celebration timeless, meaningful, and entirely your own.
-                button-text: 
-                link: 
+                text: >-
+                    Perched above the shoreline, the two-bedroom penthouse
+                    invites rare seclusion with sweeping ocean views, a private
+                    infinity pool, and personal cabana. Enjoy Regent Club
+                    access, bespoke in-residence breakfast, and a 60-minute
+                    Balinese massage, an experience of quiet indulgence, where
+                    every detail evokes refinement, privacy, and serene coastal
+                    living.
+                button-text:
+                link:
             -
                 nav-heading: Events
                 heading: Exceptional Events, Rewarded
                 image: /uploads/regent-unite.avif
-                imag-alt: 
-                text: Save up to 10% and earn 3X points with IHG Business Rewards. Limited-time offers for events at Regent Bali Canggu.
-                button-text: 
+                imag-alt:
+                text: >-
+                    Save up to 10% and earn 3X points with IHG Business Rewards.
+                    Limited-time offers for events at Regent Bali Canggu.
+                button-text:
                 link:
             -
                 nav-heading: Spa & Wellness
                 heading: Sense of harmony
                 image: /uploads/regent-bali-8738348469-original.avif
-                imag-alt: 
-                text: Discover Regent Club, an exclusive private sanctuary and luxury residential retreat with bespoke service on your terms. Amidst sweeping harbourviews, delight in moments of decadence each day with immersive breakfast, afternoon tea and evening cocktail experiences. Unwind, recharge and be indulged in this elevated Personal Haven.
-                button-text: 
-                link:
-            -
-                nav-heading: Michelin Master Series
-                heading: Where Michelin Stars Take the Stage
-                image: /uploads/michelin-master-series-highlight-image.avif
-                imag-alt: 
-                text: Regent Bali Canggu unveils the Michelin Master Series — a showcase of culinary artistry and intimate dining. Each edition features Michelin-starred chefs from across Asia, expressing heritage and creativity through refined seasonal menus.
-                button-text: 
+                imag-alt:
+                text: >-
+                    Discover Regent Club, an exclusive private sanctuary and
+                    luxury residential retreat with bespoke service on your
+                    terms. Amidst sweeping harbourviews, delight in moments of
+                    decadence each day with immersive breakfast, afternoon tea
+                    and evening cocktail experiences. Unwind, recharge and be
+                    indulged in this elevated Personal Haven.
+                button-text:
                 link:
             -
                 nav-heading: Family Havens
                 heading: Timeless Stays, Shared Moments
                 image: /uploads/regent-balicanggu-familyhavens.avif
-                imag-alt: 
-                text: Crafted for togetherness, our family retreats combine generous space, curated activities, and bespoke experiences designed for all ages. Enhanced with exclusive benefits, each stay becomes a chapter of cherished family memories.
-                button-text: 
+                imag-alt:
+                text: >-
+                    Crafted for togetherness, our family retreats combine
+                    generous space, curated activities, and bespoke experiences
+                    designed for all ages. Enhanced with exclusive benefits,
+                    each stay becomes a chapter of cherished family memories.
+                button-text:
                 link:
-        
         color-scheme: base
     -
         _id: slider-split-banner
-
         block-content-html: >-
-            <h3>RESTAURANTS & DINING</h3><h2 class="heading-lg">An Oasis of Gastronomy</h2><p>Wake up to the soft glow of Balinese sunlight, the sound of the Indian Ocean breaking in the distance, and the scent of tropical flowers in the air from the comfort of your meticulously designed suite or villa.</p>
+            <h3>RESTAURANTS & DINING</h3><h2 class="heading-lg">An Oasis of
+            Gastronomy</h2><p>Wake up to the soft glow of Balinese sunlight, the
+            sound of the Indian Ocean breaking in the distance, and the scent of
+            tropical flowers in the air from the comfort of your meticulously
+            designed suite or villa.</p>
         text-alignment: center
         text-box-max-width: 35rem
         slider:
@@ -178,24 +209,37 @@ blocks:
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Taru</h2><p>The signature culinary destination of the resort, Taru offers an immersive dining experience, through reinvented authentic flavours of essential Indonesian dishes, innovated by touches of modern cooking techniques and ingredients, balanced with contrasting international specialties.</p><p>Open 7am - 10pm everyday. </p>
-                button-link: #
+                    <h3 class="heading-lg h2">Taru</h2><p>The signature culinary
+                    destination of the resort, Taru offers an immersive dining
+                    experience, through reinvented authentic flavours of
+                    essential Indonesian dishes, innovated by touches of modern
+                    cooking techniques and ingredients, balanced with
+                    contrasting international specialties.</p><p>Open 7am - 10pm
+                    everyday. </p>
+                button-link:
                 button-text: Explore Taru
-
             -
                 background-desktop-image: /uploads/beach-house-1.jpg
                 background-mobile-image: /uploads/beach-house-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Beach house</h2><p>A stunning addition to the Canggu coastline, the Beach House lures with its shimmering pool, and ocean breeze. An ideal setting for craft cocktails and the delicate flavours of the sea.</p><p>Open 8am - 10pm everyday. </p>
-                button-link: #
+                    <h3 class="heading-lg h2">Beach house</h2><p>A stunning
+                    addition to the Canggu coastline, the Beach House lures with
+                    its shimmering pool, and ocean breeze. An ideal setting for
+                    craft cocktails and the delicate flavours of the
+                    sea.</p><p>Open 8am - 10pm everyday. </p>
+                button-link:
                 button-text: Explore Beach house
-
             -
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Sazon</h2><p>Led by award-winning Chef Andrew Walsh, experience the neighborhood Spanish hideaway on Batu Bolong, where vibrant atmosphere meets authentic flavours.</p><p>Open 8am - 10pm everyday. </p> <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon - 4am</p>
-                button-link: #
+                    <h3 class="heading-lg h2">Sazon</h2><p>Led by award-winning
+                    Chef Andrew Walsh, experience the neighborhood Spanish
+                    hideaway on Batu Bolong, where vibrant atmosphere meets
+                    authentic flavours.</p><p>Open 8am - 10pm everyday. </p>
+                    <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon -
+                    4am</p>
+                button-link:
                 button-text: Explore Sazon
         color-scheme: mint-300
     -
