Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@ blocks:
                     edition features Michelin-starred chefs from across Asia,
                     expressing heritage and creativity through refined seasonal
                     menus.
-                button-text:
-                link:
+                button-text: DISCOVER MORE
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/michelin-master-series-regent-bali-canggu-2025
             -
                 nav-heading: Penthouse
                 heading: Above the Ocean, Beyond the Ordinary
@@ -155,8 +156,8 @@ blocks:
                     Balinese massage, an experience of quiet indulgence, where
                     every detail evokes refinement, privacy, and serene coastal
                     living.
-                button-text:
-                link:
+                button-text: VIRTUAL TOUR
+                link: https://my.3dscan.id/en/tour/regent-penthouse-day
             -
                 nav-heading: Events
                 heading: Exceptional Events, Rewarded
@@ -165,8 +166,8 @@ blocks:
                 text: >-
                     Save up to 10% and earn 3X points with IHG Business Rewards.
                     Limited-time offers for events at Regent Bali Canggu.
-                button-text:
-                link:
+                button-text: ENQUIRE
+                link: events@regentbalicanggu.com
             -
                 nav-heading: Spa & Wellness
                 heading: Sense of harmony
@@ -179,7 +180,7 @@ blocks:
                     decadence each day with immersive breakfast, afternoon tea
                     and evening cocktail experiences. Unwind, recharge and be
                     indulged in this elevated Personal Haven.
-                button-text:
+                button-text: LEARN MORE
                 link:
             -
                 nav-heading: Family Havens
@@ -191,8 +192,9 @@ blocks:
                     generous space, curated activities, and bespoke experiences
                     designed for all ages. Enhanced with exclusive benefits,
                     each stay becomes a chapter of cherished family memories.
-                button-text:
-                link:
+                button-text: DISCOVER MORE
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/regent-bali-canggu-family-brochure
         color-scheme: base
     -
         _id: slider-split-banner
