fixed highlights button

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ blocks:
                     moments—flavours that linger, music that stirs the soul, and
                     gatherings that become cherished memories. A celebration
                     timeless, meaningful, and entirely your own.
-                button-text:
-                link:
+                button-text: FESTIVE BROCHURE
+                link: https://digital.ihg.com/is/content/ihg/regent-bali-canggu-festive-seasons-2025?fmt=pdf
             -
                 nav-heading: Michelin Master Series
                 heading: Where Michelin Stars Take the Stage
