Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ blocks:
                     and evening cocktail experiences. Unwind, recharge and be
                     indulged in this elevated Personal Haven.
                 button-text: LEARN MORE
-                link:
+                link: https://jazzy-boombox.cloudvent.net/Wellness.html
             -
                 nav-heading: Family Havens
                 heading: Timeless Stays, Shared Moments
