Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@ blocks:
         min-height: 50vh
     -
         _id: banner-split-video
-        block-content-html: "<h2 class=\"heading-lg\">REGENT CLUB</h2><h3 class=\"sub-heading\"></h3>Above the Ocean, Beyond the Ordinary</h3><p>A sanctuary reserved for those who seek time, space, and effortless privilege. At the Regent Club, days unfold with quiet abundance. Guests enjoy refined all-day culinary offerings and a carefully curated selection of premium wines and spirits, accompanied by afternoon tea rituals and evening cocktails served with champagne.</p><p>You are invited to join intimate cultural experiences, relax within serene adults-only cabanas, and unwind by the private infinity pool, a peaceful setting designed for moments of stillness and unhurried comfort.</p>"
+        block-content-html: >-
+            <h2 class="heading-lg">REGENT CLUB</h2><h3
+            class="sub-heading"></h3>Above the Ocean, Beyond the
+            Ordinary</h3><p>A sanctuary reserved for those who seek time, space,
+            and effortless privilege. At the Regent Club, days unfold with quiet
+            abundance. Guests enjoy refined all-day culinary offerings and a
+            carefully curated selection of premium wines and spirits,
+            accompanied by afternoon tea rituals and evening cocktails served
+            with champagne.</p><p>You are invited to join intimate cultural
+            experiences, relax within serene adults-only cabanas, and unwind by
+            the private infinity pool, a peaceful setting designed for moments
+            of stillness and unhurried comfort.</p>
         background-desktop-image: /uploads/desktop-banner-1.jpg
         background-mobile-image: /uploads/desktop-banner-1.jpg
         videos:
@@ -138,7 +149,8 @@ blocks:
                     gatherings that become cherished memories. A celebration
                     timeless, meaningful, and entirely your own.
                 button-text: FESTIVE BROCHURE
-                link: https://digital.ihg.com/is/content/ihg/regent-bali-canggu-festive-seasons-2025?fmt=pdf
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/regent-bali-canggu-festive-seasons-2025?fmt=pdf
             -
                 nav-heading: Michelin Master Series
                 heading: Where Michelin Stars Take the Stage
@@ -150,8 +162,9 @@ blocks:
                     edition features Michelin-starred chefs from across Asia,
                     expressing heritage and creativity through refined seasonal
                     menus.
-                button-text:
-                link:
+                button-text: DISCOVER MORE
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/michelin-master-series-regent-bali-canggu-2025
             -
                 nav-heading: Penthouse
                 heading: Above the Ocean, Beyond the Ordinary
@@ -165,8 +178,8 @@ blocks:
                     Balinese massage, an experience of quiet indulgence, where
                     every detail evokes refinement, privacy, and serene coastal
                     living.
-                button-text:
-                link:
+                button-text: VIRTUAL TOUR
+                link: https://my.3dscan.id/en/tour/regent-penthouse-day
             -
                 nav-heading: Events
                 heading: Exceptional Events, Rewarded
@@ -175,8 +188,8 @@ blocks:
                 text: >-
                     Save up to 10% and earn 3X points with IHG Business Rewards.
                     Limited-time offers for events at Regent Bali Canggu.
-                button-text:
-                link:
+                button-text: ENQUIRE
+                link: events@regentbalicanggu.com
             -
                 nav-heading: Spa & Wellness
                 heading: Sense of harmony
@@ -201,8 +214,9 @@ blocks:
                     generous space, curated activities, and bespoke experiences
                     designed for all ages. Enhanced with exclusive benefits,
                     each stay becomes a chapter of cherished family memories.
-                button-text:
-                link:
+                button-text: DISCOVER MORE
+                link: >-
+                    https://digital.ihg.com/is/content/ihg/regent-bali-canggu-family-brochure
         color-scheme: base
     -
         _id: slider-split-banner
@@ -246,7 +260,8 @@ blocks:
                     <h3 class="heading-lg h2">Sazón</h2><p>Led by award-winning
                     Chef Andrew Walsh, experience the neighborhood Mediterranean
                     hideaway on Batu Bolong, where vibrant atmosphere meets
-                    authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
+                    authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00
+                    am</p><p>Fri - Sun 12.00 pm</p>
                 button-link: /dining
                 button-text: Discover Sazón
         color-scheme: mint-300
