Updated 2 files via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -100,7 +100,8 @@ blocks:
             p-text: >-
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Mediterranean hideaway on Batu Bolong, where
-                vibrant atmosphere meets authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
+                vibrant atmosphere meets authentic flavours.</p><p>Mon - Thurs
+                06.00 pm - 12.00 am</p><p>Fri - Sun 12.00 pm</p>
             buttons:
                 -
                     text: Discover more
@@ -169,8 +170,9 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url:
-                    button-color: mint-400
+                    url: >-
+                        https://digital.ihg.com/is/content/ihg/bali-the-lounge-menu
+                    button-color: '#000000'
         carousel:
             desktop-image-position: right
             dots: true
