--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@ blocks:
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Sazón</h2><p>Led by award-winning
-                    Chef Andrew Walsh, experience the neighborhood Mediterranean
+                    <h3 class="heading-lg h2">Sazón<p>Led by award-winning Chef
+                    Andrew Walsh, experience the neighborhood Mediterranean
                     hideaway on Batu Bolong, where vibrant atmosphere meets
                     authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00
-                    am</p><p>Fri - Sun 12.00 pm</p>
-                button-link: /dining
+                    am</p><p>Fri - Sun 12.00 pm</p></h3>
+                button-link: https://sazonbali.com
                 button-text: Discover Sazón
         color-scheme: mint-300
     -
