Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -45,6 +45,11 @@ blocks:
                     url: >-
                         https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/taru
                     color-scheme: mint-500
+                -
+                    text: RESERVE A TABLE
+                    url: >-
+                        https://www.tablecheck.com/en/regent-bali-canggu-taru/reserve/message?utm_source=website
+                    color-scheme: dark
         carousel:
             desktop-image-position: right
             dots: true
