Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -83,7 +83,7 @@ blocks:
                     text: Reserve a Table
                     url: >-
                         https://www.tablecheck.com/en/regent-bali-canggu-beach-house/reserve/message?utm_source=website
-                    color-scheme: mint-500
+                    color-scheme: dark
         carousel:
             desktop-image-position: left
             dots: true
@@ -116,7 +116,7 @@ blocks:
                     text: Reserve a Table
                     url: >-
                         https://www.tablecheck.com/en/regent-bali-canggu-sazon/reserve/message?utm_source=instagram
-                    color-scheme: mint-500
+                    color-scheme: dark
         carousel:
             desktop-image-position: right
             dots: true
@@ -140,6 +140,38 @@ blocks:
                 and the gentle ripple of fountains blends with the rhythmic
                 crash of distant waves along the shore.<br /><br /><br /><br
                 />Open 07.00 am - 07.00 pm every day. </p>
+            buttons:
+                -
+                    text: Discover more
+                    url:
+                    color-scheme: mint-500
+                -
+                    text: Reserve a Table
+                    url:
+                    color-scheme: dark
+        carousel:
+            desktop-image-position: left
+            dots: true
+            slides:
+                -
+                    img: /uploads/pool-bar1.jpg
+                    alt: Pool bar
+                -
+                    img: /uploads/pool-bar2.jpg
+                    alt: Pool bar
+        color-scheme: base
+        scheme-padding: small-padding
+        scheme-max-width: l
+    -
+        _id: split-banner-slider
+        content:
+            subHeading: THE LOUNGE
+            heading:
+            p-text: >-
+                <p>Experience timeless classics with a modern twist. Savour
+                locally roasted coffee, exquisite teas, and fine wines in an
+                elegant setting overlooking the resort's cascading pools, to the
+                ocean.<br /><br />Open 11.00 am - 10.00 pm every day.</p>
             buttons:
                 -
                     text: Discover more
