Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -142,13 +142,9 @@ blocks:
                 />Open 07.00 am - 07.00 pm every day. </p>
             buttons:
                 -
-                    text: Discover more
+                    text:
                     url:
-                    color-scheme: mint-500
-                -
-                    text: Reserve a Table
-                    url:
-                    color-scheme: dark
+                    color-scheme: base
         carousel:
             desktop-image-position: left
             dots: true
